Change text on help message

--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -296,7 +296,8 @@
                         <strong>
                             <i class="glyphicon glyphicon-question-sign"></i> Not finding what you are looking for?
                         </strong>
-                        <p>Private resources owned by you or shared with you by colleagues are searchable from
+                        <p class="space-top">Private resources owned by you or shared with you by colleagues are
+                            searchable from
                             <strong><a href="/my-resources">My Resources</a></strong></p>
                     </div>
                     {% include "includes/legend.html" %}
