--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -315,7 +315,7 @@
                     <i class="glyphicon glyphicon-question-sign"></i> Not finding what you are looking for?
                 </strong>
                 <p class="space-top">
-                    Search for public resources not owned by you on the <a href="/search">Discover</a> page.
+                    Search for public resources not owned by you on the <a href="/search"><strong>Discover</strong></a> page.
                 </p>
             </div>
             {% include "includes/legend.html" %}
