Update cursor settings for multiple elements Update tooltip icon style for consistency

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -48,11 +48,11 @@
                 <h2 class="page-title">Create Resource
                     <small class="text-muted">
                         <em>A DOI is reserved for the resource. </em>
-                        <span class="glyphicon glyphicon-info-sign info-popover-glypn"
-                              data-toggle="popover1" data-placement="bottom"
-                              data-content="A Digital Object Identifier (DOI) is reserved for the resource.
-                              It remains inactive until the resource is published."></span>
                     </small>
+                    <span class="glyphicon glyphicon-info-sign info-popover-glypn c-pointer"
+                          data-toggle="popover1" data-placement="bottom"
+                          data-content="A Digital Object Identifier (DOI) is reserved for the resource.
+                              It remains inactive until the resource is published."></span>
                 </h2>
             </div>
 
