--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -90,7 +90,8 @@
                             <div class="btn-group" role="group">
                                 <div class="dropdown dropdown-lg">
                                     <span id="btn-clear-search-input"
-                                          class="glyphicon glyphicon-remove-sign btn-clear-search"></span>
+                                          class="glyphicon glyphicon-remove-sign btn-clear-search c-pointer">
+                                    </span>
 
                                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
                                             aria-expanded="false"><span class="caret"></span></button>
