--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -2034,10 +2034,12 @@ a.tag:hover {
 }
 
 #discover-resource-search {
-	width: 100%;
-	margin-bottom: 20px;
-	margin-left: 10px;
-	float: right;
+    width: 100%;
+    margin-left: 10px;
+}
+
+#solr-help-info {
+	align-self: center;
 }
 
 .resource-search input {
@@ -3968,6 +3970,10 @@ div.group-add-photo {
 	border: 1px solid #DDD;
 }
 
+#discover-page-options-1 a, #discover-page-options-2 a {
+	cursor: pointer;
+}
+
 #geocoder-panel {
 	z-index: 5;
 	padding: 5px;
@@ -5101,4 +5107,8 @@ a[data-toggle="modal"] {
 
 .border-gray {
 	border: 1px solid #DDD;
+}
+
+.c-pointer {
+	cursor: pointer;
 }
