--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1689,9 +1689,9 @@ body > .main-container {
 	color: #428bca;
 }
 
-#btn-download-all {
+#fb-inner-buttons #btn-download-all {
 	text-decoration: none;
-	padding: 0px 6px;
+	padding: 0 6px;
 	display: inline-block;
 }
 
@@ -4483,7 +4483,7 @@ div#fb-inner-controls button, .file-browser-search {
 	margin-bottom: 8px;
 }
 
-#fb-file-operations-controls > button, #btn-download-all {
+#fb-file-operations-controls > button, #fb-inner-buttons #btn-download-all {
 	filter: progid:DXImageTransform.Microsoft.Gradient(enabled='false');
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
@@ -4497,7 +4497,7 @@ div#fb-inner-controls button, .file-browser-search {
 	pointer-events: none;
 }
 
-#fb-file-operations-controls > button, #btn-download-all {
+#fb-file-operations-controls > button, #fb-inner-buttons #btn-download-all {
 	margin-top: 8px;
 	text-shadow: 0 1px 0 #fff;
 	border: 1px solid transparent;
@@ -4511,7 +4511,7 @@ span.caption-file-type {
     font-size: 12px;
 }
 
-#fb-file-operations-controls > button:not(.disabled):hover, #btn-download-all:hover {
+#fb-file-operations-controls > button:not(.disabled):hover, #fb-inner-buttons #btn-download-all:hover {
 	border: 1px solid #DDD;
 	box-shadow: 1px 1px 3px #e2e2e2;
 	-webkit-box-shadow: 1px 1px 3px #e2e2e2;
