Add button to add metadata on side panel Minor style changes on confirmation dialog

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -163,7 +163,7 @@
                             <span>Add metadata</span>
                         </li>
                         {# ADD METADATA TO A FOLDER #}
-                        <li id="btn-set-fileset-file-type" data-fb-action="setFileSetFileType">
+                        <li data-fb-action="setFileSetFileType">
                             <i class="fa fa-plus icon-green" aria-hidden="true"></i>
                             <span>Add metadata</span>
                         </li>
