--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1305,15 +1305,19 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title">Remove content type</h4></div>
-                <div class="modal-body"><strong>Removing the content type will remove the metadata associated with this
-                    content. Are you sure you want to do this?</strong>
+                    <h4 class="modal-title">Remove content type</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Removing the content type will remove the metadata associated with this
+                    content.</p>
+                    <p>Are you sure you want to do this?</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" id="btnCancelRemoveAggregation" class="btn btn-default" data-dismiss="modal">
-                        Cancel
+                    <button type="button" id="btnCancelRemoveAggregation" class="btn btn-default"
+                            data-dismiss="modal">Cancel
                     </button>
-                    <button type="button" id="btnRemoveAggregation" class="btn btn-danger" data-dismiss="modal">Remove
+                    <button type="button" id="btnRemoveAggregation" class="btn btn-danger"
+                            data-dismiss="modal">Remove
                     </button>
                 </div>
             </div>
