owner self removal warning

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -421,6 +421,16 @@ a.sign-out-inline:hover {
 	overflow: hidden;
 }
 
+/* warning access removal dialog title */
+.access-dialog-title {
+	display: none;
+}
+/* warning access removal dialog content */
+.access-warning {
+	float:left; 
+	margin:12px 12px 50px 0;
+}
+
 /* Inbox */
 
 .pm-search {
