--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1937,24 +1937,26 @@
     </div>
     {#======= Manage access modal  window ends =======#}
 
-    {% block delete-self-access-to-resource %}
-        <div id="dialog-confirm-delete-self-access" title="Warning! Loss of access" style="display:none">
-            <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 50px 0;"></span>
-                This action will remove your access to this resource and you will no longer be able to
-                access it without someone else sharing it with you again. This is not reversible,
-                so <strong>Remove</strong> with caution.
-            </p>
-        </div>
-    {% endblock %}
+    <div id="dialog-confirm-delete-self-access" class="access-dialog-title" title="Warning! Loss of access"> 
+        <p><span class="ui-icon ui-icon-alert access-warning"></span>
+            This action will remove your access to this resource and you will no longer be able to
+            access it without someone else sharing it with you again. This is not reversible,
+            so <strong>Remove</strong> with caution.
+        </p>
+    </div>
+    
+    <div id="dialog-confirm-change-share-permission" class="access-dialog-title" title="Warning! Loss of owner access">
+        <p><span class="ui-icon ui-icon-alert access-warning"></span>
+        This action will remove your owner access to this resource. This removal is not reversible. Owner 
+        access can only be retrieved by another owner later granting you owner access. <strong>Remove</strong> with caution.
+        </p>
+    </div>
 
-    {% block change-share-permission %}
-        <div id="dialog-confirm-change-share-permission" title="Warning! Loss of owner privilege" style="display:none">
-            <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 50px 0;"></span>
-                This action will make you lose owner privilege to this resource. You will no longer be an owner
-                without another owner set you back to owner. This is not reversible, so <strong>Comfirm</strong> with caution.
-            </p>
-        </div>
-    {% endblock %}
+    <div id="dialog-user-invited" class="access-dialog-title" title="Information: Access">
+        <p><span class="ui-icon ui-icon-alert access-warning"></span>
+        The user already has access. 
+        </p>
+    </div>
 {% endif %}
 
 <div class="modal fade" id="redirect-referenced-url-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
