Addressing code review and one additional bug

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1762,7 +1762,7 @@
 
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Invite</h3>
+                            <h3 class="panel-title">Give access</h3>
                         </div>
                         <div id="div-invite-people" class="panel-body">
                             <div id="invite-flag" class="btn-group" role="group"
@@ -1952,11 +1952,6 @@
         </p>
     </div>
 
-    <div id="dialog-user-invited" class="access-dialog-title" title="Information: Access">
-        <p><span class="ui-icon ui-icon-alert access-warning"></span>
-        The user already has access. 
-        </p>
-    </div>
 {% endif %}
 
 <div class="modal fade" id="redirect-referenced-url-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
