--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -2411,6 +2411,14 @@ table.table.access-table {
 	font-size: 12px;
 }
 
+.label-block {
+	padding: .2em .6em .3em;
+  	line-height: 1;
+  	color: #ffffff;
+  	vertical-align: baseline;
+  	border-radius: .25em;
+}
+
 #list-roles > li > a {
 	font-size: 14px;
 	cursor: pointer;
