--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -159,13 +159,16 @@
                               action="/hsapi/_internal/create-resource/do/">
                             {% csrf_token %}
 
-                            <div class="hs-dropzone-header">
-                                <i class="fa fa-info-circle" aria-hidden="true"></i>
-                                <span class="hs-dropzone-header-help">Drop files below or click to upload.</span>
+                            <div class="hs-dropzone-header flex">
+                                <i style="align-self: center;" class="fa fa-info-circle" aria-hidden="true"></i>
+                                <span>Drop files below or click to upload.</span>
 
-                                <span id="btn-remove-all-files" class="btn btn-default pull-right">
-                                    <i class="fa fa-trash-o btn-remove" aria-hidden="true"></i>
-                                    <span>&nbsp;&nbsp;Remove All Files</span>
+                                <span class="text-right" style="flex-grow: 1;">
+                                    {% include "irods_controls.html" %}
+                                    <span id="btn-remove-all-files" class="btn btn-default btn-xs">
+                                        <i class="fa fa-trash-o btn-remove" aria-hidden="true"></i>
+                                        <span>&nbsp;&nbsp;Remove All Files</span>
+                                    </span>
                                 </span>
                             </div>
 
@@ -197,7 +200,6 @@
                             </div>
 
                             <div>
-                                <hr>
                                 <label>To load files from an iRODS server including your iRODS user HydroShare server:</label>
 
                                 <div id="irods-browse">
