Disable Quota change button on submit Revert unneeded change

--- a/theme/templates/resource-landing-page/quota.html
+++ b/theme/templates/resource-landing-page/quota.html
@@ -43,7 +43,7 @@
 
                     <button type="button" class="btn btn-default" data-toggle="collapse"
                             data-target="#form-quota-holder">Cancel</button>
-                    <button type="submit" class="btn btn-primary btn-change-quota-holder"
+                    <button type="submit" class="btn btn-primary btn-change-quota-holder btn-disable-after-valid"
                     style="margin-left: 5px;">Save Changes</button>
                 </form>
             {% endif %}
