--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -78,6 +78,18 @@
                                 <div class="resource-type-name">&nbsp;Composite</div>
                             </a>
                         </li>
+                        {# TODO: for testing purposes, remove at code cleanup#}
+                        {#---------------------------------------------------#}
+                        <li>
+                            <a data-toggle="tooltip" data-placement="right"
+                               title="A resource which can include multiple files without file format limitations."
+                               data-value="RasterResource">
+                                <img src="{{ STATIC_URL }}img/resource-icons/geographicraster48x48.png"
+                                     alt="Composite Resource Icon" class="resource-type-icon"/>
+                                <div class="resource-type-name">&nbsp;Geographic Raster</div>
+                            </a>
+                        </li>
+                        {#---------------------------------------------------#}
                         <li>
                             <a data-toggle="tooltip" data-placement="right"
                                title="A resource that holds a list of other resources in HydroShare."
