--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -83,10 +83,10 @@
                         <li>
                             <a data-toggle="tooltip" data-placement="right"
                                title="A resource which can include multiple files without file format limitations."
-                               data-value="RasterResource">
-                                <img src="{{ STATIC_URL }}img/resource-icons/geographicraster48x48.png"
-                                     alt="Composite Resource Icon" class="resource-type-icon"/>
-                                <div class="resource-type-name">&nbsp;Geographic Raster</div>
+                               data-value="TimeSeriesResource">
+                                <img src="{{ STATIC_URL }}img/resource-icons/timeseries48x48.png"
+                                     alt="" class="resource-type-icon"/>
+                                <div class="resource-type-name">&nbsp;TimeSeriesResource</div>
                             </a>
                         </li>
                         {#---------------------------------------------------#}
