--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -83,10 +83,10 @@
                         <li>
                             <a data-toggle="tooltip" data-placement="right"
                                title="A resource which can include multiple files without file format limitations."
-                               data-value="TimeSeriesResource">
-                                <img src="{{ STATIC_URL }}img/resource-icons/timeseries48x48.png"
+                               data-value="NetcdfResource">
+                                <img src="{{ STATIC_URL }}img/resource-icons/multidimensional48x48.png"
                                      alt="" class="resource-type-icon"/>
-                                <div class="resource-type-name">&nbsp;TimeSeriesResource</div>
+                                <div class="resource-type-name">&nbsp;NetcdfResource</div>
                             </a>
                         </li>
                         {#---------------------------------------------------#}
