Fix layout cutoff for Geographic Feature resources in view mode

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -82,11 +82,11 @@
                         {#---------------------------------------------------#}
                         <li>
                             <a data-toggle="tooltip" data-placement="right"
-                               title="A resource which can include multiple files without file format limitations."
-                               data-value="NetcdfResource">
-                                <img src="{{ STATIC_URL }}img/resource-icons/multidimensional48x48.png"
+                               title=""
+                               data-value="GeographicFeatureResource">
+                                <img src="{{ STATIC_URL }}img/resource-icons/geographicfeature48x48.png"
                                      alt="" class="resource-type-icon"/>
-                                <div class="resource-type-name">&nbsp;NetcdfResource</div>
+                                <div class="resource-type-name">&nbsp;GeographicFeatureResource</div>
                             </a>
                         </li>
                         {#---------------------------------------------------#}
