Remove unused context variable

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -83,10 +83,10 @@
                         <li>
                             <a data-toggle="tooltip" data-placement="right"
                                title=""
-                               data-value="RefTimeSeriesResource">
-                                <img src="{{ STATIC_URL }}img/resource-icons/his48x48.png"
+                               data-value="GenericResource">
+                                <img src="{{ STATIC_URL }}img/resource-icons/generic48x48.png"
                                      alt="" class="resource-type-icon"/>
-                                <div class="resource-type-name">&nbsp;RefTimeSeriesResource</div>
+                                <div class="resource-type-name">&nbsp;GenericResource</div>
                             </a>
                         </li>
                         {#---------------------------------------------------#}
