--- a/hs_app_netCDF/templates/pages/netcdfresource.html
+++ b/hs_app_netCDF/templates/pages/netcdfresource.html
@@ -62,7 +62,7 @@
             {% endif %}
 
             {# Add the Variable meta #}
-            <legend style="margin-top:20px;">Variables</legend>
+            <legend class="space-top">Variables</legend>
             {% if variables %}
                 <div id="variables" class="well clearfix">
                     <div class="row">
@@ -145,10 +145,10 @@
 
     {# Add THREDDS service #}
     {% if nc_file_name %}
-        <div id="#thredds">
-            <h3>THREDDS Data Service</h3>
-            <h4>OPeNDAP: <a href="{{ opendap }}" target="_blank"> {{ nc_file_name }} </a></h4>
-            <h4>Visualize using IDV:Requires IDV <a href="https://www.unidata.ucar.edu/software/idv/" target="_blank">installation</a>, then use OPeNDAP service link as "URL" for IDV "Data Choosers"</h4>
+        <div id="#thredds" class="col-sm-12 space-top">
+            <legend>THREDDS Data Service</legend>
+            <p>OPeNDAP: <a href="{{ opendap }}" target="_blank"> {{ nc_file_name }} </a></p>
+            <p>Visualize using IDV:Requires IDV <a href="https://www.unidata.ucar.edu/software/idv/" target="_blank">installation</a>, then use OPeNDAP service link as "URL" for IDV "Data Choosers"</p>
         </div>
     {% endif %}
 
