--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1321,7 +1321,7 @@
                         <div class="form-group">
                             {% csrf_token %}
                             <fieldset>
-                                <div id="div_id_type" class="control-group">
+                                <div id="div_id_type" class="control-group space-bottom">
                                     <label for="id_type" class="control-label requiredField">
                                     Type of relationship<span class="asteriskField">*</span></label>
 
