--- a/theme/templates/resource-landing-page/references.html
+++ b/theme/templates/resource-landing-page/references.html
@@ -124,12 +124,13 @@ Click this button to add a relationship to another resource, external website, o
             </button>
             <div class="flex">
                 <i class="glyphicon glyphicon-info-sign" style="margin-right: 20px;"></i>
-                <em style="padding-right:20px;">If this resource is related to other documents, datasets, websites, etc., you can record those
-                    relationships here as references. For example, if this resource is cited by a paper you published,
-                    select a relationship type of "Data for" and then provide a full text citation for the paper that
-                    used the data, including the paper's DOI encoded as an HTTP URL if available. This records that this
-                    resource is the data for the paper that cited it. If you enter a URL as part of the citation, it
-                    will be converted to an active link.</em>
+                <em style="padding-right:20px;">If this resource is related to other documents, datasets, websites,
+                    etc., you can record those relationships here as references. For example, if this resource is cited
+                    by a paper you published, select a relationship type of "The content of this resource serves as the
+                    data for" and then provide a full text citation for the paper that used the data, including the
+                    paper's DOI encoded as an HTTP URL if available. This records that this resource is the data for the
+                    paper that cited it. If you enter a URL as part of the citation, it will be converted to an active
+                    link.</em>
             </div>
         </div>
 
@@ -178,7 +179,7 @@ Click this button to add a relationship to another resource, external website, o
             </tbody>
         </table>
         {% else %}
-            <p class="small text-muted">No related resources have been added.</p>
+            <p class="small text-muted">Add associated journal publications, dissertations, etc. here.</p>
         {% endif %}
     </div>
 {% endif %}
