[#3211] adding comment to show where we still have performance issues

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -261,11 +261,13 @@
                             {# Last Modified #}
                             <td>{{ res.updated|date:"M d, Y" }} at {{ res.updated|time }}</td>
                             <td>
+                                {# Here we are hitting the database once for each resource that is listed #}
                                 {% for kw in res.metadata.subjects.all %}
                                    {% if forloop.counter0 > 0 %},{% endif %}{{ kw.value}}
                                 {% endfor %}
                             </td>
                             <td>
+                                {# Here we are hitting the database once for each resource that is listed #}
                                 {% for creator in res.metadata.creators.all %}
                                     {% if forloop.counter0 != 0 %}<span> · </span>{% endif %}
                                     {% if creator.description %}
