--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -622,15 +622,15 @@
                                                     <span class="fa fa-download icon-blue"></span>
                                                 </button>
 
-                                                {% if user_zone_account_exist %}
+{#                                                {% if user_zone_account_exist %}#}
                                                     <a id="rep-res-bag" type="button"
                                                        title="Copy Resource Bag to iRODS User Zone"
                                                        data-target="#rep-resource-to-irods-dialog"
                                                        data-toggle="modal"
                                                        data-placement="auto">
-                                                        <span class="fa fa-clone icon-blue"></span>
+                                                        <span class="hs-icon-irods icon-blue"></span>
                                                     </a>
-                                                {% endif %}
+{#                                                {% endif %}#}
 
                                                 {% for b in cm.bags.all %}
                                                     <a id="btn-download-all" type="button"
