--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -600,6 +600,32 @@
     </div>
 </div>
 
+    <div class="modal fade in" id="validate-reference-url-dialog" tabindex="-1" role="dialog"
+         aria-labelledby="validate-reference-url" aria-hidden="false">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title" id="validate-url-title">Unable to validate URL</h4>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        Unable to validate URL link. This may be due to an error in the URL or password or automated bot
+                        protection at the hosting site. If you still want to create referenced content using this invalid URL
+                        link, click <strong>Proceed</strong>. Otherwise, click <strong>Cancel</strong> to enter a valid URL link.
+                    </p>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" id="btn-reference-url-without-validation" class="btn btn-primary"
+                            data-dismiss="modal">Proceed
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="modal fade in" id="add-reference-url-dialog" tabindex="-1" role="dialog"
          aria-labelledby="add-reference" aria-hidden="false">
         <div class="modal-dialog">
