get edit referenced url working

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -616,6 +616,7 @@
                     </p>
                     <input type="hidden" id="ref_name_passover" value=""/>
                     <input type="hidden" id="ref_url_passover" value=""/>
+                    <input type="hidden" id="new_ref_url_passover" value=""/>
                 </div>
 
                 <div class="modal-footer">
