--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -620,8 +620,8 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" id="btn-reference-url-without-validation" class="btn btn-primary"
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                    <button type="button" id="btn-reference-url-without-validation" class="btn btn-default"
                             data-dismiss="modal">Proceed
                     </button>
                 </div>
